--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "git": "node scripts/git-commit"
+    "g": "hexo g",
+    "d": "hexo d",
+    "c": "hexo clean",
+    "s": "hexo s -g"
   },
   "hexo": {
     "version": "3.8.0"
   },
   "dependencies": {
     "hexo": "^3.8.0",
+    "hexo-deployer-git": "^1.0.0",
     "hexo-generator-archive": "^0.1.5",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-index": "^0.2.1",
