--- a/_config.yml
+++ b/_config.yml
@@ -81,3 +81,21 @@ deploy:
   type: git
   repository: git@github.com:Binote/Binote.github.io.git
   branch: master
+
+# 添加萌萌哒二次元看板娘
+live2d:
+  enable: true
+  scriptFrom: local
+  pluginRootPath: live2dw/
+  pluginJsPath: lib/
+  pluginModelPath: assets/
+  tagMode: false
+  log: false
+  model:
+    use: live2d-widget-model-wanko
+  display:
+    position: right
+    width: 150
+    height: 300
+  mobile:
+    show: true
