--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "g": "hexo g",
-    "d": "hexo d",
+    "d": "hexo clean && hexo d",
     "c": "hexo clean",
     "s": "hexo s -g"
   },
@@ -18,10 +18,12 @@
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-index": "^0.2.1",
     "hexo-generator-tag": "^0.2.0",
+    "hexo-helper-live2d": "^3.1.0",
     "hexo-renderer-ejs": "^0.3.1",
     "hexo-renderer-marked": "^0.3.2",
     "hexo-renderer-stylus": "^0.3.3",
-    "hexo-server": "^0.3.3"
+    "hexo-server": "^0.3.3",
+    "live2d-widget-model-wanko": "^1.0.5"
   },
   "devDependencies": {
     "inquirer": "^6.2.2",
